--- a/styles.css
+++ b/styles.css
@@ -43,16 +43,16 @@ body {
   color: white;
 }
 
-#aciklama {
+#credits-to-creator {
   padding-bottom: 0.4rem;
 }
 
-#usttekiyazi {
+#top-definition {
   background-color: white;
   padding: 1.5rem 16rem 1rem 2rem;
 }
 
-#ortadakiform {
+#middle-form {
   background-color: white;
   padding: 1rem 4rem 2rem 2rem;
   box-shadow: 5px 5px 12px rgba(197, 197, 197, 0.8);
@@ -139,3 +139,50 @@ button {
   font-weight: 600;
   letter-spacing: 0.4px;
 }
+
+@media screen and (max-width: 800px){
+    .inputline{
+        display: flex;
+        flex-direction: column;
+        gap: 5px;
+    }
+
+    #top-definition{
+        padding: 1.5rem 2rem;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    #left-side{
+        width: 100%;
+    }
+
+    footer{
+        margin: 20px auto;
+        text-align: center;
+    }
+
+    button{
+        width: 100%;
+    }
+
+    .inputline input{
+        width: 75%;
+    }
+
+    #odin-logo {
+        display: flex;
+        background-color: rgba(0, 0, 0, 0.5);
+        width: 100%;
+        height: 20%;
+        margin-bottom: 200px;
+        justify-content: center;
+        align-items: center;
+      }
+   
+  }
